--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My First Bitstarter</title>
+		<title>Game Server Hosting</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -93,17 +93,17 @@
 		<div class="container">
 			<div class="row-fluid heading">
 				<div class="span12">
-					<h1>Product</h1>
+					<h1>Game Server Hosting</h1>
 				</div>
 			</div>
 			<div class="row-fluid subheading">
 				<div class="span12">
-					<p class="lead">One sentence description.</p>
+					<p class="lead">Fully managed game server hosting.</p>
 				</div>
 			</div>
 			<div class="row-fluid pitch">
 				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://www.friesennet.com/images/game_logo.jpg">
 				</div>
 
 				<div class="span5 actions">
@@ -111,17 +111,17 @@
 						<div class="statistics">
 							<div class="span4">
 								<div class="linediv-l">
-									<h3>1000</h3> <p>backers</p>
+									<h3>0</h3> <p>backers</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-c">
-									<h3>$6000</h3> <p>of $10,000</p>
+									<h3>$0</h3> <p>of $10,000</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-r">
-									<h3>10</h3> <p>days left</p>
+									<h3>60</h3> <p>days left</p>
 								</div>
 							</div>
 						</div>
@@ -142,44 +142,17 @@
 				</div>
 			</div>
 
-			<div class="row-fluid section1">
-				<div class="span5 offset1 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
-				</div>
-				<div class="span5 copy">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-						porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-						mollis justo velit at nunc. Fusce nec egestas sem. Donec
-						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-						volutpat lorem ut congue malesuada. In facilisis scelerisque
-						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-						quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-						risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-						rutrum, nunc leo tempus nisl, eu mollis justo velit at
-						nunc. Fusce nec egestas sem. Donec fringilla.
-					</p>
-				</div>
-			</div>
 			<div class="row-fluid section2">
 				<div class="span5 offset1 copy copy-right">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-						porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-						mollis justo velit at nunc. Fusce nec egestas sem. Donec
-						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-						volutpat lorem ut congue malesuada. In facilisis scelerisque
-						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-						quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-						risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-						rutrum, nunc leo tempus nisl, eu mollis justo velit at
-						nunc. Fusce nec egestas sem. Donec fringilla.
+						This start-up will provide fully managed game servers to clients and communities
+						who have limited experience with running servers. The servers will be auto-updated
+						and various addons can be added to the server with the push of a button.
+
 					</p>
 				</div>
 				<div class="span5 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://www.friesennet.com/images/datacenter.jpg">
 				</div>
 			</div>
 
@@ -190,24 +163,24 @@
 						<div class="accordion-group">
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-									What does FAQ stand for?
+									How do servers update?
 								</a>
 							</div>
 							<div id="collapseOne" class="accordion-body collapse">
 								<div class="accordion-inner">
-									Frequently Asked Question.
+									The servers will automatically update the themselves when games release updates.
 								</div>
 							</div>
 						</div>
 						<div class="accordion-group">
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-									What's a Frequently Asked Question?
+									What addons/config can be added?
 								</a>
 							</div>
 							<div id="collapseTwo" class="accordion-body collapse">
 								<div class="accordion-inner">
-									A question which is commonly asked by users.
+									There will be several addons/configs available at launch like Sourcemod/Metamod and Replay options.
 								</div>
 							</div>
 						</div>
